--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build:backend": "tsc --outDir dist src/backend/index.ts",
     "start:dev": "webpack-dev-server --config webpack.dev.js",
     "start:backend": "node dist/backend/index.js",
-    "test": "jest"
+    "test": "jest",
+    "start:server": "ts-node ./src/backend/server.ts"
   },
   "author": "",
   "license": "ISC",
@@ -17,6 +18,7 @@
     "@babel/preset-react": "^7.12.5",
     "@babel/preset-typescript": "^7.3.3",
     "@types/enzyme": "^3.10.8",
+    "@types/express": "^4.17.13",
     "@types/jest": "^24.0.13",
     "@types/jquery": "^3.3.29",
     "@types/node": "^12.19.4",
@@ -42,6 +44,7 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-jest": "^24.0.2",
+    "ts-node": "^10.4.0",
     "typescript": "^3.4.5",
     "uglifyjs-webpack-plugin": "^2.1.3",
     "webpack": "^4.32.2",
@@ -52,9 +55,12 @@
   "dependencies": {
     "@types/ws": "^7.4.0",
     "bootstrap": "^4.6.0",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-query": "^3.32.2",
+    "react-router-dom": "^6.0.2",
     "react-test-renderer": "^16.8.6",
     "ws": "^7.4.3"
   },
