--- a/package.json
+++ b/package.json
@@ -14,29 +14,30 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.12.5",
-    "@babel/preset-typescript": "^7.3.3",
-    "@types/enzyme": "^3.10.8",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
+    "@types/enzyme": "^3.10.10",
     "@types/express": "^4.17.13",
     "@types/jest": "^24.0.13",
-    "@types/jquery": "^3.3.29",
-    "@types/node": "^12.19.4",
-    "@types/react": "^16.9.56",
-    "@types/react-dom": "^16.8.4",
-    "@webpack-cli/serve": "^1.1.0",
+    "@types/jquery": "^3.5.8",
+    "@types/lodash": "^4.14.177",
+    "@types/node": "^12.20.37",
+    "@types/react": "^16.14.20",
+    "@types/react-dom": "^16.9.14",
+    "@webpack-cli/serve": "^1.6.0",
     "awesome-typescript-loader": "^5.2.1",
     "babel-jest": "^24.8.0",
     "css-loader": "^2.1.1",
     "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
+    "enzyme-adapter-react-16": "^1.15.6",
     "eslint-config-standard": "^12.0.0",
-    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^9.1.0",
-    "eslint-plugin-promise": "^4.1.1",
-    "eslint-plugin-react": "^7.13.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.27.0",
     "eslint-plugin-standard": "^4.1.0",
-    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "jest": "^24.8.0",
     "node-sass": "^4.12.0",
     "react-testing-library": "^7.0.1",
@@ -44,25 +45,27 @@
     "source-map-loader": "^0.2.4",
     "style-loader": "^0.23.1",
     "ts-jest": "^24.0.2",
+    "ts-loader": "^9.2.6",
     "ts-node": "^10.4.0",
-    "typescript": "^3.4.5",
+    "typescript": "4.4.4",
     "uglifyjs-webpack-plugin": "^2.1.3",
-    "webpack": "^4.32.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "webpack-merge": "^5.4.0"
+    "webpack": "^5.64.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.5.0",
+    "webpack-merge": "^5.8.0"
   },
   "dependencies": {
-    "@types/ws": "^7.4.0",
-    "bootstrap": "^4.6.0",
+    "@types/ws": "^7.4.7",
+    "bootstrap": "^4.6.1",
     "express": "^4.17.1",
-    "jquery": "^3.4.1",
+    "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-query": "^3.32.2",
+    "react-query": "^3.32.3",
     "react-router-dom": "^6.0.2",
     "react-test-renderer": "^16.8.6",
-    "ws": "^7.4.3"
+    "ws": "^7.5.5"
   },
   "jest": {
     "transform": {
