tile switch, moved tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -48,8 +48,7 @@
         "esModuleInterop": true,
     },
     "include": [
-        "src/**/*",
-        "test/**/*"
+        "src/**/*"
     ],
     "exclude": [
         "node_modules",
